--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Signika:wght@400;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -6,9 +7,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box; 
+    font-family: 'Signika', sans-serif;
 }  
 
-body {
+body, header, footer {
     background-color: #000300;
-
 }
+
