--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
     font-family: 'Signika', sans-serif;
 }  
 
-body, header, footer {
+body, header, footer, select {
     background-color: #000300;
 }
 
